--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- 🔹 인터넷 & 위치 권한 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <!-- GPS 기능 사용 -->
+    <uses-feature android:name="android.hardware.location.gps" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +21,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherTune"
         tools:targetApi="31">
+
+        <!-- Google Maps API Key 등록 -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${GOOGLE_MAP_API_KEY}"/>
+
         <!--SplashActivity-->
         <activity
             android:name=".SplashActivity"
@@ -33,6 +48,10 @@
             android:exported="false"
             android:parentActivityName=".MainActivity">
         </activity>
+        <!--MapActivity-->
+        <activity
+            android:name=".MapActivity"
+            android:exported="false" />
 
     </application>
 
