--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
             android:exported="false"
             android:parentActivityName=".MainActivity">
         </activity>
+        <activity
+            android:name=".PlaylistActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
+        </activity>
         <!--MapActivity-->
         <activity
             android:name=".MapActivity"
