feat: 플레이리스트 전체보기 화면 UI 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,12 @@
             android:exported="false"
             android:parentActivityName=".MainActivity">
         </activity>
+        <!-- AllPlaylistsActivity 추가 -->
+        <activity
+            android:name=".AllPlaylistsActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
+        </activity>
         <!--MapActivity-->
         <activity
             android:name=".MapActivity"
